Updates to SA 1.1-10

--- a/01_agama/samyukta/01/SA1_5.md
+++ b/01_agama/samyukta/01/SA1_5.md
@@ -3,7 +3,7 @@ layout: default
 title: 'The Related Discourses | 1. The Aggregates | 5 (2). Correctly Contemplated'
 type: kramdown
 base: ../../../
-previous: SA1_4.html
+previous: SA1_1-4.html
 next: SA1_6.html
 ---
 
@@ -11,33 +11,34 @@ next: SA1_6.html
 ## [1. The Aggregates](index.html)
 ### 5 (2). Correctly Contemplated
 
-1\. Thus have I heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
+1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
 {:#p1}
 
-2\. It was then that the Bhagavān addressed the monks, “One should correctly contemplate form, observe that form is impermanent, and truly know it. Why is that? Monks, when someone correctly contemplates form, observes it to be impermanent, and truly knows it, they stop desire and greed for form. When someone stops desire and greed, I say their mind is liberated.
+2\. It was then that the Bhagavān addressed the monks, “One should correctly contemplate form,[\[2\]](#n2){:#ref2} observe that form is impermanent, and truly know it. Why is that? Monks, when someone correctly contemplates form, observes it to be impermanent, and truly knows it, they stop desire and greed for form. When someone stops desire and greed, I say their mind is liberated.
 {:#p2}
 
-3\. “Thus, one should correctly contemplate feeling … conception … volition … consciousness, observe that consciousness is impermanent, and truly know it. Why is that? When someone correctly contemplates consciousness, observes it to be impermanent, [and truly knows it], they stop desire and greed for consciousness. When someone stops desire and greed, I say their mind is liberated.
+3\. “Thus, one should correctly contemplate feeling … conception … volition … consciousness, observe that consciousness is impermanent, and truly know it. Why is that? When someone correctly contemplates consciousness, observes it to be impermanent[, and truly knows it], they stop desire and greed for consciousness. When someone stops desire and greed, I say their mind is liberated.
 {:#p3}
 
-4\. “Thus, someone who wants to realize the mind’s liberation for themselves can then realize: ‘My births have been ended, the religious practice has been established, and the task has been accomplished. I myself know that I won’t be subject to a later existence.’”
+4\. “In this way, someone who wants to realize the mind’s liberation for themselves can realize: ‘My births have been ended, the religious practice has been established, and the task has been accomplished. I myself know that I won’t be subject to a later existence.’”[\[3\]](#n3){:#ref3}
 {:#p4}
 
-5\. When the monks heard what the Buddha taught, they rejoiced and approved.[\[2\]](#n2){:#ref2}
+5\. When the monks heard what the Buddha taught, they rejoiced and approved.
 {:#p5}
 
 ---
 
 ### Notes
 
-1. {:#n1} This sūtra is parallel with [SN 22.52](https://suttacentral.net/sn22.52){:target="_blank"} and [SĀ 2.5](../02/sa2_5.html){:target="_blank"}. [\[back\]](#ref1)
-2. {:#n2} The <em>Taisho</em> edition includes a note describing variant sūtras that’s identical to the one found in [SĀ 1.1](sa1_1.html){:target="_blank"}; however, these variants would be inconsistent with the summary verse at the end of [SĀ 1.10](sa1_10.html){:target="_blank"}, and the parallel sūtra at [SĀ 2.5](../02/sa2_5.html){:target="_blank"} doesn’t have these variants. I have followed Yinshun’s lead in ignoring this variant note. [\[back\]](#ref2)
+1. {:#n1} This <em>sūtra</em> is parallel with <a href="https://suttacentral.net/sn22.52" target="_blank">SN 22.52</a> and <a href="../02/sa2_5.html" target="_blank">SĀ 2.5</a>. [\[back\]](#ref1)
+2. {:#n2} <em>correctly contemplate</em>. C. 正思惟, P. <em>yoniso manasi karotha</em>. In SĀ, the term 正思惟 appears to translate a Prakrit parallel to <em>yoniso manasi karoti</em> in Pali <em>sutta</em>s, meaning (正, “correctly, properly”) and v. (思惟, “contemplate, think about, ponder”). In Pali, <em>manasi</em> is a noun in the locative case with a general action verb applied to it, resulting is something like “wisely apply the mind.” The terms in both languages describe rational or logical thought which arrives at the correct conclusion, rather than meditation. I’ve translated the C. literally. [\[back\]](#ref2)
+3. {:#n3} The <cite>Taisho</cite> edition includes a note describing variant <em>sūtra</em>s that’s identical to the one found in <a href="sa1_1.html" target="_blank">SĀ 1.1</a>; however, these variants would be inconsistent with the summary verse at the end of <a href="sa1_10.html" target="_blank">SĀ 1.10</a>, and the parallel <em>sūtra</em> at <a href="../02/sa2_5.html" target="_blank">SĀ 2.5</a> doesn’t have these variants. I have followed Yinshun’s lead in ignoring this variant note. [\[back\]](#ref3)
 
 ---
 
 Translator: Charles Patton
 {: .translator}
-Last Revised: 17 October 2022
+Last Revised: 10 December 2023
 {: .revised}
 
 ---
