--- a/01_agama/samyukta/01/SA1_6.md
+++ b/01_agama/samyukta/01/SA1_6.md
@@ -14,10 +14,10 @@ next: SA1_7.html
 1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
 {:#p1}
 
-2\. It was then that the Bhagavān addressed the monks, “When one doesn’t know or understand form and doesn’t stop or become free of desire for it, it’s not possible for them to stop suffering. Thus, when one doesn’t know or understand feeling … conception … volition … consciousness and doesn’t stop or become free of desire for it, it’s not possible for them to stop suffering.
+2\. It was then that the Bhagavān addressed the monks, “When one doesn’t know or understand form and doesn’t stop or become free of desire for it, it’s not possible to stop suffering. Thus, when one doesn’t know or understand feeling … conception … volition … consciousness and doesn’t stop or become free of desire for it, it’s not possible to stop suffering.
 {:#p2}
 
-3\. “Monks, if someone knows and understands form and stops and becomes free of desire for it, it’s possible for them to stop suffering. Thus, if someone knows and understands feeling … conception … volition … consciousness and stops and becomes free of desire for it, it’s possible for them to stop suffering.”
+3\. “Monks, if someone knows and understands form and stops and becomes free of desire for it, it’s possible to stop suffering. Thus, if someone knows and understands feeling … conception … volition … consciousness and stops and becomes free of desire for it, it’s possible to end suffering.”
 {:#p3}
 
 4\. When the monks heard what the Buddha taught, they rejoiced and approved.
@@ -27,13 +27,14 @@ next: SA1_7.html
 
 ### Notes
 
-1. {:#n1} This sūtra is parallel with [SN 22.24](https://suttacentral.net/sn22.24){:target="_blank"} and [SĀ 2.6](../02/sa2_6.html){:target="_blank"}. [\[back\]](#ref1)
+1. {:#n1} This and the next three <em>sūtra</em>s are parallel with <a href="https://suttacentral.net/sn22.24" target="_blank">SN 22.24</a> and <a href="../02/sa2_6.html" target="_blank">SĀ 2.6</a>.<br/>
+The first two keywords in this <em>sūtra</em>, “knowing” (知) and understanding” (明), are more significant in the Pali parallel: “directly knowing” (<em>abhijāna</em>) and “fully understanding” (<em>parijāna</em>). In the Theravāda commentary, the first term refers to the knowledge of both a trainee and an <em>arhat</em>, while the second refers only to an <em>arhat</em>’s knowledge. Here, the C. doesn’t indicate these technical readings as I would expect with modifiers, and I’ve translated it in a straightforward way. The verbs may have been slightly different synonyms in the Prakrit original. [\[back\]](#ref1)
 
 ---
 
 Translator: Charles Patton
 {: .translator}
-Last Revised: 20 October 2022
+Last Revised: 10 December 2023
 {: .revised}
 
 ---
