--- a/01_agama/samyukta/01/SA1_7.md
+++ b/01_agama/samyukta/01/SA1_7.md
@@ -14,10 +14,10 @@ next: SA1_8.html
 1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
 {:#p1}
 
-2\. It was then that the Bhagavān addressed the monks, “When one doesn’t know or understand form and don’t stop or become free of desire for it, their mind isn’t liberated, and then they can’t transcend the fear of birth, old age, illness, and death. Thus, when one doesn’t know or understand feeling … conception … volition … consciousness and doesn’t stop or become free of desire for it, their mind isn’t liberated, and then they can’t transcend the fear of birth, old age, illness, and death.
+2\. It was then that the Bhagavān addressed the monks, “When one doesn’t know and understand form and doesn’t stop and become free of desire for it, their mind isn’t liberated, and then they can’t transcend the fear of birth, old age, illness, and death. Thus, when one doesn’t know and understand feeling … conception … volition … consciousness and doesn’t stop and become free of desire for it, their mind isn’t liberated, and then they can’t transcend the fear of birth, old age, illness, and death.
 {:#p2}
 
-3\. “Monks, if someone knows and understands form and stops and becomes free of desire for it, their mind is liberated, and then they can transcend the fear of birth, old age, illness, and death. Thus, if someone knows and understands feeling … conception … volition … consciousness and stops and becomes free of desire for it, their mind is liberated, and then they can transcend the fear of birth, old age, illness, and death.”
+3\. “Monks, if someone knows and understands form and stops and becomes free of desire for it, their mind is liberated, and then they can transcend the fear of birth, old age, illness, and death. Thus, if someone knows and understands feeling … perception … volition … consciousness and stops and becomes free of desire for it, their mind is liberated, and then they can transcend the fear of birth, old age, illness, and death.”
 {:#p3}
 
 4\. When the monks heard what the Buddha taught, they rejoiced and approved.
@@ -27,13 +27,13 @@ next: SA1_8.html
 
 ### Notes
 
-1. {:#n1} This sūtra is similar to [SN 22.24](https://suttacentral.net/sn22.24){:target="_blank"} and parallel with [SĀ 2.7](../02/SA2_7.html){:target="_blank"}. [\[back\]](#ref1)
+1. {:#n1} This <em>sūtra</em> is a variant of the previous and next two <em>sūtra</em>s. As a group, they are parallel to <a href="https://suttacentral.net/sn22.24" target="_blank">SN 22.24</a>, and this <em>sūtra</em> is also parallel with <a href="../02/SA2_7.html" target="_blank">SĀ 2.7</a>. See the notes to <a href="SA1_6.html" target="_blank">SĀ 1.6</a> for more about its relationship to its Pali counterpart. [\[back\]](#ref1)
 
 ---
 
 Translator: Charles Patton
 {: .translator}
-Last Revised: 17 October 2022
+Last Revised: 10 December 2023
 {: .revised}
 
 ---
