--- a/01_agama/samyukta/01/SA1_8.md
+++ b/01_agama/samyukta/01/SA1_8.md
@@ -14,7 +14,7 @@ next: SA1_9.html
 1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
 {:#p1}
 
-2\. It was then that the Bhagavān addressed the monks, “When one doesn’t know or understand form and doesn’t become free of desire for it, their mind isn’t liberated. Their mind not being liberated, they can’t stop suffering. Thus, when one doesn’t know or understand feeling … conception … volition … consciousness and doesn’t become free of desire for it, their mind isn’t liberated, and then they can’t stop suffering.
+2\. It was then that the Bhagavān addressed the monks, “When one doesn’t know and understand form and doesn’t become free of desire for it, their mind isn’t liberated. Their mind not being liberated, they can’t stop suffering. Thus, when one doesn’t know and understand feeling … conception … volition … consciousness and doesn’t become free of desire for it, their mind isn’t liberated, and then they can’t stop suffering.
 {:#p2}
 
 3\. “Monks, if someone knows and understands form and becomes free of desire for it, their mind is liberated, and then they can stop suffering. Thus, if someone knows and understands feeling … conception … volition … consciousness and becomes free of desire for it, their mind is liberated, and then they can stop suffering.”
@@ -27,13 +27,14 @@ next: SA1_9.html
 
 ### Notes
 
-1. {:#n1} This sūtra is similar to [SN 22.24](https://suttacentral.net/sn22.24){:target="_blank"} and parallel with [SĀ 2.8](../02/SA2_8.html){:target="_blank"}. The <em>Taisho</em> version of this sūtra copies content from [SĀ 1.10 (7)](SA1_10.html){:target="_blank"} into its beginning. I’ve followed Yinshun’s lead in ignoring this material as spurious on the grounds that the summary verse for this group of sūtras only mentions one sūtra on delight. We should also note that [SĀ 2.8](../02/SA2_8.html){:target="_blank"} would be a strong parallel if we delete the added material, which would then maintain the pattern of SĀ 1.1-10 corresponding closely to SĀ 2.1-10. [\[back\]](#ref1)
+1. {:#n1} This <em>sūtra</em> is a variant of the previous two and next <em>sūtra</em>. As a group, they are parallel to <a href="https://suttacentral.net/sn22.24" target="_blank">SN 22.24</a>, and this <em>sūtra</em> is parallel with <a href="../02/SA2_8.html" target="_blank">SĀ 2.8</a>.<br/>
+The <cite>Taisho</cite> version of this <em>sūtra</em> copies content from <a href="SA1_10.html" target="_blank">SĀ 1.10 (7)</a> into its beginning. I’ve followed Yinshun’s lead in ignoring this material as spurious on two grounds. First, the summary verse for this group of <em>sūtra</em>s only mentions one <em>sūtra</em> on delight. Second, <a href="../02/SA2_8.html" target="_blank">SĀ 2.8</a> would be a strong parallel if we deleted the added material. This would then maintain the pattern of SĀ 1.1-10 corresponding closely to SĀ 2.1-10. It would appear to be a case of a copyist losing their place and copying a few lines from the wrong <em>sūtra</em>. [\[back\]](#ref1)
 
 ---
 
 Translator: Charles Patton
 {: .translator}
-Last Revised: 17 October 2022
+Last Revised: 10 December 2023
 {: .revised}
 
 ---
