--- a/01_agama/samyukta/01/SA1_9.md
+++ b/01_agama/samyukta/01/SA1_9.md
@@ -27,13 +27,13 @@ next: SA1_10.html
 
 ### Notes
 
-1. {:#n1} This sūtra is similar to [SN 22.24](https://suttacentral.net/sn22.24){:target="_blank"} and parallel with SĀ 2.9. [\[back\]](#ref1)
+1. {:#n1} This <em>sūtra</em> is a variant of the previous three <em>sūtra</em>s. As a group, they are parallel to <a href="https://suttacentral.net/sn22.24" target="_blank">SN 22.24</a>, and this <em>sūtra</em> is parallel with <a href="../02/SA2_9.html" target="_blank">SĀ 2.9</a>. [\[back\]](#ref1)
 
 ---
 
 Translator: Charles Patton
 {: .translator}
-Last Revised: 17 October 2022
+Last Revised: 10 December 2023
 {: .revised}
 
 ---
