--- a/01_agama/samyukta/01/SA1_1-4.md
+++ b/01_agama/samyukta/01/SA1_1-4.md
@@ -12,32 +12,38 @@ next: SA1_1.html
 ### 1-4 (1). Impermanent, Painful, Empty, and Not Self
 
 1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
-{: #p1}
+{:#p1}
 
-2\. It was then that the Bhagavān addressed the monks, “One should observe that form is [1] impermanent … [2] painful … [3] empty … [4] not self. Observing it in this way is right view.[\[2\]](#n2){:#ref2} Correctly observing it gives rise to disillusionment. When someone is disillusioned, delight and greed end. When delight and greed end, I say their mind is liberated.
-{: #p2}
+2\. It was then that the Bhagavān addressed the monks, “You should observe that form is [1] impermanent … [2] painful … [3] empty … [4] not self. Observing it in this way is right view.[\[2\]](#n2){:#ref2} Correctly observing it gives rise to disillusionment. When someone is disillusioned, delight and greed end. When delight and greed end, I say one’s mind is liberated.
+{:#p2}
 
-3\. “Thus observe that feeling … conception … volition … consciousness is [1] impermanent … [2] painful … [3] empty … [4] not self. Observing it in this way is right view. Correctly observing it gives rise to disillusionment. When someone is disillusioned, delight and greed end. When delight and greed end, I say their mind is liberated.
+3\. “Thus observe that feeling … conception … volition … consciousness is [1] impermanent … [2] painful … [3] empty … [4] not self. Observing it in this way is right view. Correctly observing it gives rise to disillusionment. When someone is disillusioned, delight and greed end. When delight and greed end, I say one’s mind is liberated.
 {:#p3}
 
-4\. “Thus, monks, someone who wants to realize the mind’s liberation for themselves can then realize: ‘My births have been ended, the religious practice has been established, and the task has been accomplished. I myself know that I won’t be subject to a later existence.’”
+4\. “In this way, monks, someone who wants to realize the mind’s liberation for themselves can realize: ‘My births have been ended, the religious practice[\[3\]](#n3){:#ref3} has been established, and the task has been accomplished. I myself know that I won’t be subject to a later existence.’”
 {:#p4}
 
+<em>Like “observe … impermanent,” “pain,” “emptiness,” and “not self” are taught in the same way.</em>
+
 5\. When the monks heard what the Buddha taught, they rejoiced and approved.
-{: #p5}
+{:#p5}
 
 ---
 
 ### Notes
 
-1. {:#n1} Close parallels to this sūtra are [SN 22.12](https://suttacentral.net/sn22.12){:target="_blank"} and [SN 22.51](https://suttacentral.net/sn22.51){:target="_blank"}. The next three sūtras (SĀ 1.2-4) are variants that follow this template while substituting three other attributes (“painful,” “empty,” and “not self”) for “impermanent.” Compare this sūtra with [SĀ 2.1-4 (188)](../02/SA2_1.html){:target="_blank"}, which applies an identical template to the six senses. The Chinese translator there employs clearer grammatical structures and vocabulary choices (e.g., 觀察 to clarify that 觀 means “observe” instead of “contemplate,” 正見 instead of 正觀, and dependent clauses instead of nominalized subjects). [\[back\]](#ref1)
-2. {:#n2} <em>right view</em>. Yinshun amends “correct observation” (正觀) to “right view” (正見) in this sūtra citing the parallel passages at [SN 22.51](https://suttacentral.net/sn22.51){:target="_blank"} and [SĀ 2.1](../02/SA2_1.html){:target="_blank"}. I’ve followed his suggestion here and below. [\[back\]](#ref2)
+1. {:#n1} These four <em>sūtra</em>s (SĀ 1.1-4) are  <em>sūtra</em> no. 1 in the <cite>Taisho</em> edition (T99.2.1a6). Close Pali parallels include <a href="https://suttacentral.net/sn22.12" target="_blank">SN 22.12</a> and <a href="https://suttacentral.net/sn22.51" target="_blank">SN 22.51</a>.<br/>
+These <em>sūtra</em>s follow the same template with the keywords “impermanent,” “painful,” “empty,” and “not self.” Compare these <em>sūtra</em>s with <a href="../02/SA2_1.html" target="_blank">SĀ 2.1-4 (188)</a>, which apply the same template to the six sense fields (i.e., vision, hearing, smelling, taste, tactile feelings, and mental perceptions). This parallelism continues between SĀ 1.1-10 and SĀ 2.1-10.<br/>
+The Chinese translators there employs clearer grammatical structures and vocabulary choices than they do here. E.g., 觀察 is clearer than 觀 for the meaning “to observe.” 正見 appear more correct than 正觀 when we compare these <em>sūtra</em>s with their Pali counterparts. And dependent clauses are used instead of topicalized subjects. Looking past these minor differences, the source texts appear to have been identical templates.<br/>
+These stylistic differences indicate that either different translators worked on the project at different times, or perhaps there was a hiatus during which the same translator’s style changed. [\[back\]](#ref1)
+2. {:#n2} <em>right view</em>. Yinshun amends “correct observation” (正觀) to “right view” (正見) in this <em>sūtra</em>, citing the parallel passages at <a href="https://suttacentral.net/sn22.51" target="_blank">SN 22.51</a> and <a href="../02/SA2_1-4.html" target="_blank">SĀ 2.1-4</a>. I’ve followed his suggestion here and below. [\[back\]](#ref2)
+3. {:#n3} <em>religious practice</em>. C. 梵行, G. <em>braṃmayiya</em>, P. <em>brahmacariya</em>, S. <em>brahmacarya</em>. This term is typically translated lit. to C. as “Brahma” (梵) “practice” (行). It usu. refers generally to living as a religious person toward a spiritual goal, but it also specifically meant the celebate life. This practice of celebacy is probably why it was called the “Brahma” practice: Buddhists held that sexuality and gender didn’t exist in the Brahma heavens and above (cf. <a href="../../dirgha/DA_30-8.html#p66" target="_blank">DĀ 30, Chapter 8</a>, where this topic is discussed). To practice celebacy was to emulate the gods above the desire realm. [\[back\]](#ref3)
 
 ---
 
 Translator: Charles Patton
 {: .translator}
-Last Revised: 17 October 2022
+Last Revised: 10 December 2023
 {: .revised}
 
 ---
