--- a/01_agama/samyukta/01/SA1_10.md
+++ b/01_agama/samyukta/01/SA1_10.md
@@ -24,23 +24,23 @@ next: SA1_11-14.html
 {:#p4}
 
 #### Summary Verse
-* {:.verse}[1] Impermanent, [2] painful, [3] empty,\\
-And [4] not self; [5] correctly contemplated;\\
-[6-9] Four ways of not knowing;\\
+
+* {:.verse}[1] Impermanent, [2] painful, [3] empty,<br/>
+And [4] not self; [5] correctly contemplated;<br/>
+[6-9] Four ways of not knowing;<br/>
 And [10] delighting in form.
 
 ---
 
 ### Notes
 
-1. {:#n1} This sūtra is parallel with [SN 22.29](https://suttacentral.net/sn22.29){:target="_blank"} and SĀ 2.10. [\[back\]](#ref1)
+1. {:#n1} This <em>sūtra</em> is parallel with <a href="https://suttacentral.net/sn22.29" target="_blank">SN 22.29</a> and <a href="../02/SA2_10.html" target="_blank">SĀ 2.10</a>. [\[back\]](#ref1)
 
 ---
 
 Translator: Charles Patton
 {: .translator}
-Last Revised: 17 October 2022
+Last Revised: 10 December 2023
 {: .revised}
 
 ---
-
